fix header navigation on tablet

--- a/assets/css/headers/header2.css
+++ b/assets/css/headers/header2.css
@@ -192,7 +192,7 @@
 
 /*Responsive @Media 
 ------------------------------------*/
-@media (min-width: 767px) {
+@media (min-width: 1199px) {
 	/*Navbar Collapse*/
 	.header .navbar-collapse {
 		padding: 0;
